Styles and customer icons added

--- a/src/index.html
+++ b/src/index.html
@@ -2,24 +2,28 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Registro Público de la Propiedad</title>
+  <title>Registro Público de la Propiedad | Gobierno del Estado de Zacatcas</title>
 
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Sistema del Registro Público de la Propiedad del Gobierno del Estado.">
-  <meta name="author" content="La Vía Óntica SC, Ontica LLC and contributors.">
+  <meta name="description" content="Sistema del Registro Público de la Propiedad del Gobierno del Estado de Zacatecas.">
+  <meta name="author" content="La Vía Óntica SC, Ontica LLC and contributors">
   <meta name="robots" content="index,follow" />
   <link rel="icon" type="image/x-icon" href="assets/img/favicon/favicon.ico">
 
-    <!-- FAVICON -->
-    <!-- <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
-    <link rel="manifest" href="assets/img/favicon/manifest.json">
-    <link rel="shortcut icon" href="assets/img/favicon/favicon.ico">
-    <meta name="msapplication-TileColor" content="#00aba9">
-    <meta name="msapplication-config" content="assets/img/favicon/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff"> -->
+  <!-- FAVICON -->
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="assets/img/favicon/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="assets/img/favicon/manifest.json">
+  <link rel="mask-icon" href="assets/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="assets/img/favicon/favicon.ico">
+  <meta name="msapplication-TileColor" content="#b91d47">
+  <meta name="msapplication-TileImage" content="assets/img/favicon/mstile-144x144.png">
+  <meta name="msapplication-config" content="assets/img/favicon/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
 
   <base href="/">
 
@@ -45,8 +49,8 @@
       }
     </style>
 
-    <b style='font-size: 20px'>Registro Público de la Propiedad</b><br/><br/>
-    <b>Gobierno del Estado</b>
+    <strong style='font-size: 20px'>Registro Público de la Propiedad</strong><br/><br/>
+    <strong>Gobierno del Estado de Zacatecas</strong>
     <br/><br/>
     <span>Cargando componentes ...</span>
   </emp-ng-root>
