Minimal code linting

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Registro Público de la Propiedad | Gobierno del Estado de Zacatcas</title>
+  <title>Registro Público de la Propiedad | Gobierno del Estado de Zacatecas</title>
 
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Sistema del Registro Público de la Propiedad del Gobierno del Estado de Zacatecas.">
+  <meta name="description" content="Sistema del Registro Público de la Propiedad del Gobierno del Estado de ecas.">
   <meta name="author" content="La Vía Óntica SC, Ontica LLC and contributors">
   <meta name="robots" content="index,follow" />
   <link rel="icon" type="image/x-icon" href="assets/img/favicon/favicon.ico">
