--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,8 @@
 
   <base href="/">
 
-  <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
+  <link rel="stylesheet" href="assets/fonts/fonts.css">
+  <link rel="stylesheet" href="assets/icons/icons.css">
 
 </head>
 <body>
