Update customer images, favicon and colors

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
 <body>
   <emp-ng-root>
     <div id="emp-app-loading-components">
-      <img src="assets/img/customer/main-page.logo.png" alt="logo"/><br/>
+      <img src="assets/img/customer/logo.png" alt="logo"/><br/>
       <strong id="emp-app-loading-title">Registro Público de la Propiedad</strong><br/><br/>
       <strong>
         Secretaría de Finanzas &nbsp; &nbsp; | &nbsp; &nbsp; Gobierno del Estado de Zacatecas
